force-app/main/default/src/objects/PJN_Data_Change_Request__c/PJN_Data_Change_Request__c.object-meta.xml
<CustomObject>
    <description>Data change request header</description>
    <label>Data Change Request</label>
    <nameField>
        <displayFormat>DCR - {000000000}</displayFormat>
        <label>Data Change Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>