force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account to be modified, or parent Account of other records being modified.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Change Requests</relationshipLabel>
    <relationshipName>PJN_Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>