force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part of the Patient Service accelerator: Affiliation to be modified.</description>
    <label>Affiliation</label>
    <referenceTo>PJN_Affiliation__c</referenceTo>
    <relationshipLabel>Data Change Requests</relationshipLabel>
    <relationshipName>Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>