force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Information to be modified.</description>
    <label>Contact Information</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Data Change Requests</relationshipLabel>
    <relationshipName>PJN_Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>