force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Country__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country__c</fullName>
    <description>Part of the Patient Service accelerator: Contains the country code for the mapping to be used when processing this DCR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>