force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_DCR_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_DCR_External_ID__c</fullName>
    <description>Part of the Patient Service accelerator: External Data Change Request ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCR External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>