force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Error__c.field-meta.xml
<CustomField>
    <fullName>PJN_Error__c</fullName>
    <description>Part of the Patient Service accelerator: Details of any errors that occurred during outbound DCR requests to Veeva Network, or inbound DCR updates from Veeva Network. Errors are cleared after DCR is successfully processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details of any errors that occurred during outbound DCR requests to Veeva Network, or inbound DCR updates from Veeva Network. Errors are cleared after DCR is successfully processed.</inlineHelpText>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>