force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Data Change Request ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External Data Change Request ID</inlineHelpText>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>