force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_License__c.field-meta.xml
<CustomField>
    <fullName>PJN_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part of the Patient Service accelerator: License to be modified.</description>
    <label>License</label>
    <referenceTo>PJN_License__c</referenceTo>
    <relationshipLabel>Data Change Requests</relationshipLabel>
    <relationshipName>PJN_Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>