force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_License_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_License_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Information (Address) related to License which is updated.</description>
    <label>License Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Data Change Requests (License Address)</relationshipLabel>
    <relationshipName>PJN_License_Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>