force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_License_Address_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_License_Address_Network_Id__c</fullName>
    <description>Contact Information (Address) Network Id related to License which is updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License Address Network Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>