force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_MDM_Datetime__c.field-meta.xml
<CustomField>
    <fullName>PJN_MDM_Datetime__c</fullName>
    <description>Part of the Patient Service accelerator: Time of review in MDM. Used to order DCRs in processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM Datetime</label>
    <type>DateTime</type>
</CustomField>