force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Notes__c.field-meta.xml
<CustomField>
    <fullName>PJN_Notes__c</fullName>
    <description>Part of the Patient Service accelerator: User notes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>