force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part of the Patient Service accelerator: HCO account of the affiliation</description>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Change Requests (Parent Account)</relationshipLabel>
    <relationshipName>PJN_Child_DCRs</relationshipName>
    <type>Lookup</type>
</CustomField>