force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Parent_Data_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Data_Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part of the Patient Service accelerator: Link to parent DCR. Used only if multiple DCRs are created in a single step. Account DCR is always a parent. Other DCRs link to it.</description>
    <label>Parent Data Change Request</label>
    <referenceTo>PJN_Data_Change_Request__c</referenceTo>
    <relationshipLabel>Data Change Requests</relationshipLabel>
    <relationshipName>PJN_Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>