force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Patient_1__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Change Requests (Patient 1)</relationshipLabel>
    <relationshipName>Data_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>