force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Patient_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Change Requests (Patient 2)</relationshipLabel>
    <relationshipName>Data_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>