force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Patient_2_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_2_Name__c</fullName>
    <formula>PJN_Patient_2__r.FirstName &amp; &quot; &quot; &amp; PJN_Patient_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient 2 Name</label>
    <type>Text</type>
</CustomField>