force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Record_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_External_Id__c</fullName>
    <description>Part of the Patient Service accelerator: Record&apos;s External Id. For the Affiliations this is the record external id for the parent HCO.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>