force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type_Name__c</fullName>
    <description>Record associated record type developer name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>