force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Result__c.field-meta.xml
<CustomField>
    <fullName>PJN_Result__c</fullName>
    <description>Part of the Patient Service accelerator: DCR status sent from the MDM system</description>
    <inlineHelpText>DCR result returned from Customer Master.</inlineHelpText>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Already Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>