force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Sent_Datetime__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sent_Datetime__c</fullName>
    <description>Part of the Patient Service accelerator: Time the record has been sent to the MDM system for approval.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Time the record has been sent to the MDM system for approval.</inlineHelpText>
    <label>Sent Datetime</label>
    <type>DateTime</type>
</CustomField>