force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>Part of the Patient Service accelerator: local data change request status which defines what happens next with the data change request.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>