force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Part of the Patient Service accelerator: data change request type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>