force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Veeva_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Veeva_Network_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Veeva Network Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>