force-app/main/default/src/objects/PJN_Data_Change_Request__c/fields/PJN_Winner_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Winner_Patient_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner Patient Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Change Requests (Winner Patient Id)</relationshipLabel>
    <relationshipName>Data_Change_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>