force-app/main/default/src/objects/PJN_Data_Change_Request__c/recordTypes/PJN_Account.recordType-meta.xml
<RecordType>
    <fullName>PJN_Account</fullName>
    <active>true</active>
    <description>Defines a data change request for a physician or organization</description>
    <label>Account</label>
</RecordType>