force-app/main/default/src/objects/PJN_Data_Change_Request__c/recordTypes/PJN_Affiliation.recordType-meta.xml
<RecordType>
    <fullName>PJN_Affiliation</fullName>
    <active>true</active>
    <description>Defines a data change request to create an affiliation for a parent organization in the MDM system</description>
    <label>Affiliation</label>
</RecordType>