force-app/main/default/src/objects/PJN_Data_Change_Request__c/recordTypes/PJN_Contact_Information.recordType-meta.xml
<RecordType>
    <fullName>PJN_Contact_Information</fullName>
    <active>true</active>
    <description>Defines a data change request for an address</description>
    <label>Contact Information</label>
</RecordType>