force-app/main/default/src/objects/PJN_Data_Change_Request__c/recordTypes/PJN_License.recordType-meta.xml
<RecordType>
    <fullName>PJN_License</fullName>
    <active>true</active>
    <description>Defines a data change request for a physician&apos;s license</description>
    <label>License</label>
</RecordType>