force-app/main/default/src/objects/PJN_Data_Change_Request__c/recordTypes/PJN_Patient_Merge.recordType-meta.xml
<RecordType>
    <fullName>PJN_Patient_Merge</fullName>
    <active>true</active>
    <description>Defines a data change request to merge patients</description>
    <label>Patient Merge</label>
</RecordType>