force-app/main/default/src/objects/PJN_Data_Change_Request__c/validationRules/Address_has_always_Parent_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_has_always_Parent_Account</fullName>
    <active>true</active>
    <description>DCR Address must have always a Parent Account linked.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(PJN_Contact_Information__c)),ISBLANK(  PJN_Parent_Data_Change_Request__c  ))</errorConditionFormula>
    <errorMessage>DCR Address must have a Parent Account linked.</errorMessage>
</ValidationRule>