force-app/main/default/src/objects/PJN_Data_Change_Request__c/validationRules/Address_Or_Account_Or_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Or_Account_Or_Parent</fullName>
    <active>true</active>
    <description>DCR must be only one Account or Address or Parent</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName &lt;&gt; &quot;PJN_Patient_Merge&quot;,
OR(
 AND(
     NOT(ISBLANK(PJN_Contact_Information__c)),
     NOT(ISBLANK( PJN_Parent_Account__c )),
     NOT(ISBLANK(PJN_Account__c)),
     NOT(ISBLANK(PJN_License__c))
 ),
 AND(
     NOT(ISBLANK(PJN_Contact_Information__c)),
     NOT(ISBLANK( PJN_Parent_Account__c ))
 ),
 AND(
     NOT(ISBLANK(PJN_Contact_Information__c)),
     NOT(ISBLANK(PJN_Account__c))
 ),
 AND(
     NOT(ISBLANK(PJN_Parent_Account__c)),
     NOT(ISBLANK(PJN_Account__c))
 ),
 AND(
     NOT(ISBLANK(PJN_License__c)),
     NOT(ISBLANK(PJN_Account__c))
 ),
 AND(
    ISBLANK(PJN_Contact_Information__c),
    ISBLANK( PJN_Parent_Account__c ),
    ISBLANK(PJN_Account__c),
    ISBLANK(PJN_License__c)
 )
)
)</errorConditionFormula>
    <errorMessage>DCR must be only one Account or Address or Parent</errorMessage>
</ValidationRule>