force-app/main/default/src/objects/PJN_Data_Change_Request__c/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>NAME</columns>
    <columns>PJN_Account__c</columns>
    <columns>PJN_Error__c</columns>
    <columns>PJN_Contact_Information__c</columns>
    <columns>PJN_Parent_Account__c</columns>
    <columns>PJN_DCR_External_ID__c</columns>
    <columns>PJN_Status__c</columns>
    <columns>PJN_Result__c</columns>
    <columns>PJN_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PJN_Country__c</columns>
    <columns>PJN_Sent_Datetime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>